--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -31,6 +31,16 @@ model_deployments:
       args: 
         pretrained_model_name_or_path: Qwen/Qwen2.5-14B-Instruct
 
+      
+  - name: Qwen/Qwen3-8B
+    model_name: Qwen/Qwen3-8B
+    tokenizer_name: Qwen/Qwen3-8B
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: Qwen/Qwen3-8B
+
   ######################### Llama #########################
   - name: meta-llama/Llama-3.2-1B
     model_name: meta-llama/Llama-3.2-1B
