--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -32,6 +32,14 @@ models:
     release_date: 2024-05-13
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
 
+  - name: Qwen/Qwen3-8B
+    display_name: Qwen3-8B
+    description: Qwen3-8B
+    creator_organization_name: Qwen
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
   ######################### Llama #########################
 
   - name: meta-llama/Llama-3.2-1B-Instruct
