--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -29,6 +29,14 @@ tokenizer_configs:
         pretrained_model_name_or_path: Qwen/Qwen2.5-14B-Instruct
     end_of_text_token: "<|im_end|>"
     prefix_token: "None" 
+
+  - name: Qwen/Qwen3-8B 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: Qwen/Qwen3-8B
+    end_of_text_token: "<|im_end|>"
+    prefix_token: "None" 
   ######################### Llama #########################
 
   - name: meta-llama/Llama-3.2-1B 
