--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -15,6 +15,60 @@ model_deployments:
 
 
 
+  - name: google/gemma-3-4b-pt
+    model_name: google/gemma-3-4b-pt
+    tokenizer_name: google/gemma-3-4b-pt
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: google/gemma-3-4b-pt
+
+  - name: google/gemma-3-4b-it
+    model_name: google/gemma-3-4b-it
+    tokenizer_name: google/gemma-3-4b-it
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: google/gemma-3-4b-it
+
+  - name: google/gemma-3-1b-pt
+    model_name: google/gemma-3-1b-pt
+    tokenizer_name: google/gemma-3-1b-pt
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: google/gemma-3-1b-pt
+
+  - name: google/gemma-3-1b-it
+    model_name: google/gemma-3-1b-it
+    tokenizer_name: google/gemma-3-1b-it
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: google/gemma-3-1b-it
+
+  - name: google/gemma-3-12b-pt
+    model_name: google/gemma-3-12b-pt
+    tokenizer_name: google/gemma-3-12b-pt
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: google/gemma-3-12b-pt
+
+  - name: google/gemma-3-12b-it
+    model_name: google/gemma-3-12b-it
+    tokenizer_name: google/gemma-3-12b-it
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: google/gemma-3-12b-it
+
 
   ######################### Mistal ######################### 
 
