--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -18,6 +18,54 @@ models:
 
 
 
+  - name: google/gemma-3-4b-pt
+    display_name: gemma-3-4b-pt
+    description: gemma-3-4b-pt
+    creator_organization_name: google
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: google/gemma-3-4b-it
+    display_name: gemma-3-4b-it
+    description: gemma-3-4b-it
+    creator_organization_name: google
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: google/gemma-3-1b-pt
+    display_name: gemma-3-1b-pt
+    description: gemma-3-1b-pt
+    creator_organization_name: google
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: google/gemma-3-1b-it
+    display_name: gemma-3-1b-it
+    description: gemma-3-1b-it
+    creator_organization_name: google
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: google/gemma-3-12b-pt
+    display_name: gemma-3-12b-pt
+    description: gemma-3-12b-pt
+    creator_organization_name: google
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: google/gemma-3-12b-it
+    display_name: gemma-3-12b-it
+    description: gemma-3-12b-it
+    creator_organization_name: google
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
 
   ######################### Mistal ######################### 
   - name: mistralai/Mistral-7B-v0.3
