--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -15,6 +15,53 @@ tokenizer_configs:
   ####################################################################
 
 
+  - name: google/gemma-3-4b-pt 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: google/gemma-3-4b-pt
+    end_of_text_token: "<eos>"
+    prefix_token: "<bos>" 
+
+  - name: google/gemma-3-4b-it 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: google/gemma-3-4b-it
+    end_of_text_token: "<eos>"
+    prefix_token: "<bos>" 
+
+  - name: google/gemma-3-1b-pt 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: google/gemma-3-1b-pt
+    end_of_text_token: "<eos>"
+    prefix_token: "<bos>" 
+
+  - name: google/gemma-3-1b-it 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: google/gemma-3-1b-it
+    end_of_text_token: "<eos>"
+    prefix_token: "<bos>" 
+
+  - name: google/gemma-3-12b-pt 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: google/gemma-3-12b-pt
+    end_of_text_token: "<eos>"
+    prefix_token: "<bos>" 
+
+  - name: google/gemma-3-12b-it 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: google/gemma-3-12b-it
+    end_of_text_token: "<eos>"
+    prefix_token: "<bos>" 
 
   ######################### Mistal ######################### 
 
